--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "yarn run test & next build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
